[package]
name = "gl_rust"
version = "0.1.0"
authors = ["matszczygiel <ms.szczygiel@uw.edu.pl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.23.0"
gl = "0.14.0"
cgmath  = "0.17.0"
image = "0.22.3"
obj-rs = "0.5.0"
lazy_static = "1.4.0"
gltf = "0.14.0"